--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
     <jackson-annotations.version>2.9.9</jackson-annotations.version>
 
     <orika-core.version>1.5.4</orika-core.version>
-    <libphonenumber.version>8.10.18</libphonenumber.version>
+    <libphonenumber.version>8.12.2</libphonenumber.version>
     <jackson-databind.version>2.9.9</jackson-databind.version>
 
     <commmons-net.version>3.6</commmons-net.version>
@@ -63,6 +63,22 @@
     <dependency>
       <groupId>org.springframework.security</groupId>
       <artifactId>spring-security-core</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-oauth2-resource-server</artifactId>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.security.oauth</groupId>
+      <artifactId>spring-security-oauth2</artifactId>
+      <version>2.3.6.RELEASE</version>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-oauth2-jose</artifactId>
+      <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>javax.validation</groupId>
