--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -38,13 +38,6 @@ jobs:
         repository: jhapy/app-audit-server
         event-type: shared-commons-build
         client-payload: '{"ref": "${{ github.ref }}", "sha": "${{ github.sha }}"}'
-    - name: Repository Dispatch App-Authorization-Server
-      uses: peter-evans/repository-dispatch@v1
-      with:
-        token: ${{ secrets.repos_access_token }}
-        repository: jhapy/app-authorization-server
-        event-type: shared-commons-build
-        client-payload: '{"ref": "${{ github.ref }}", "sha": "${{ github.sha }}"}'
     - name: Repository Dispatch App-Frontend-Application
       uses: peter-evans/repository-dispatch@v1
       with:
@@ -66,25 +59,11 @@ jobs:
         repository: jhapy/app-resource-server
         event-type: shared-commons-build
         client-payload: '{"ref": "${{ github.ref }}", "sha": "${{ github.sha }}"}'
-    - name: Repository Dispatch Utils-Config-Server
+    - name: Repository Dispatch Utils-Registry-Server
       uses: peter-evans/repository-dispatch@v1
       with:
         token: ${{ secrets.repos_access_token }}
-        repository: jhapy/utils-config-server
-        event-type: shared-commons-build
-        client-payload: '{"ref": "${{ github.ref }}", "sha": "${{ github.sha }}"}'
-    - name: Repository Dispatch Utils-Discovery-Server
-      uses: peter-evans/repository-dispatch@v1
-      with:
-        token: ${{ secrets.repos_access_token }}
-        repository: jhapy/utils-discovery-server
-        event-type: shared-commons-build
-        client-payload: '{"ref": "${{ github.ref }}", "sha": "${{ github.sha }}"}'
-    - name: Repository Dispatch Utils-Monitoring-Application
-      uses: peter-evans/repository-dispatch@v1
-      with:
-        token: ${{ secrets.repos_access_token }}
-        repository: jhapy/utils-monitoring-application
+        repository: jhapy/utils-registry-server
         event-type: shared-commons-build
         client-payload: '{"ref": "${{ github.ref }}", "sha": "${{ github.sha }}"}'
     - name: Slack Success
