Springfox to OpenAPI

--- a/pom.xml
+++ b/pom.xml
@@ -170,16 +170,16 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>io.springfox</groupId>
-      <artifactId>springfox-swagger2</artifactId>
-      <version>2.9.2</version>
-      <optional>true</optional>
+      <groupId>org.springdoc</groupId>
+      <artifactId>springdoc-openapi-ui</artifactId>
+      <version>1.4.1</version>
+      <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>io.springfox</groupId>
-      <artifactId>springfox-bean-validators</artifactId>
-      <version>2.9.2</version>
-      <optional>true</optional>
+      <groupId>org.springdoc</groupId>
+      <artifactId>springdoc-openapi-security</artifactId>
+      <version>1.4.1</version>
+      <scope>provided</scope>
     </dependency>
   </dependencies>
 
