--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -12,6 +12,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+      if:  ${{ github.event.client_payload.ref }}
+      with:
+        ref: ${{ github.event.client_payload.ref }}
     - name: Set up JDK 1.14
       uses: actions/setup-java@v1
       with:
