--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -5,16 +5,20 @@ on:
   repository_dispatch:
     types: [shared-dto-build]
 
+env:
+  ref:
 jobs:
   build:
 
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-      if:  ${{ github.event.client_payload.ref }}
+    - if: ${{ github.event.client_payload.ref != NaN }}
+      uses: actions/checkout@v2
       with:
         ref: ${{ github.event.client_payload.ref }}
+    - if: ${{ github.event.client_payload.ref == NaN }}
+      uses: actions/checkout@v2
     - name: Set up JDK 1.14
       uses: actions/setup-java@v1
       with:
