--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -11,76 +11,82 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - run: echo ${{ github.event.client_payload.sha }}
-    - run: echo ${{ github.event.client_payload.ref }}
-    - uses: actions/checkout@v2
-      with:
-        ref: ${{ github.event.client_payload.ref }}
-    - name: Set up JDK 1.14
-      uses: actions/setup-java@v1
-      with:
-        java-version: 1.14
-    - uses: actions/cache@v1
-      with:
-        path: ~/.m2/repository
-        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-        restore-keys: |
-          ${{ runner.os }}-maven-
-    - name: Build with Maven
-      run: mvn -Dmaven.test.skip -s .settings.xml -Dmaven.javadoc.skip -Dossrh_username=${{secrets.ossrh_username}} -Dossrh_password=${{secrets.ossrh_password}} --file pom.xml deploy
-    - name: Repository Dispatch App-Base-Server
-      uses: peter-evans/repository-dispatch@v1
-      with:
-        token: ${{ secrets.repos_access_token }}
-        repository: jhapy/app-base-server
-        event-type: shared-commons-build
-        client-payload: '{"ref": "${{ github.ref }}", "sha": "${{ github.sha }}"}'
-    - name: Repository Dispatch App-Audit-Server
-      uses: peter-evans/repository-dispatch@v1
-      with:
-        token: ${{ secrets.repos_access_token }}
-        repository: jhapy/app-audit-server
-        event-type: shared-commons-build
-        client-payload: '{"ref": "${{ github.ref }}", "sha": "${{ github.sha }}"}'
-    - name: Repository Dispatch App-Frontend-Application
-      uses: peter-evans/repository-dispatch@v1
-      with:
-        token: ${{ secrets.repos_access_token }}
-        repository: jhapy/app-frontend-application
-        event-type: shared-commons-build
-        client-payload: '{"ref": "${{ github.ref }}", "sha": "${{ github.sha }}"}'
-    - name: Repository Dispatch App-I18n-Server
-      uses: peter-evans/repository-dispatch@v1
-      with:
-        token: ${{ secrets.repos_access_token }}
-        repository: jhapy/app-i18n-server
-        event-type: shared-commons-build
-        client-payload: '{"ref": "${{ github.ref }}", "sha": "${{ github.sha }}"}'
-    - name: Repository Dispatch App-Resource-Server
-      uses: peter-evans/repository-dispatch@v1
-      with:
-        token: ${{ secrets.repos_access_token }}
-        repository: jhapy/app-resource-server
-        event-type: shared-commons-build
-        client-payload: '{"ref": "${{ github.ref }}", "sha": "${{ github.sha }}"}'
-    - name: Repository Dispatch App-Notification-Server
-      uses: peter-evans/repository-dispatch@v1
-      with:
-        token: ${{ secrets.repos_access_token }}
-        repository: jhapy/app-notification-server
-        event-type: shared-commons-build
-        client-payload: '{"ref": "${{ github.ref }}", "sha": "${{ github.sha }}"}'
-    - name: Repository Dispatch Utils-Registry-Server
-      uses: peter-evans/repository-dispatch@v1
-      with:
-        token: ${{ secrets.repos_access_token }}
-        repository: jhapy/utils-registry-server
-        event-type: shared-commons-build
-        client-payload: '{"ref": "${{ github.ref }}", "sha": "${{ github.sha }}"}'
-    - name: Slack Success
-      if: always()
-      uses: kpritam/slack-job-status-action@v1
-      with:
-        job-status: ${{ job.status }}
-        slack-bot-token: ${{ secrets.slack_bot_token }}
-        channel: framework-builds
+      - run: echo Build for SHA = ${{ github.event.client_payload.sha }}, REF = ${{ github.event.client_payload.ref }}
+      - name: Slack Starting Build
+        if: always()
+        uses: kpritam/slack-job-status-action@v1
+        with:
+          job-status: Starting build for SHA = ${{ github.event.client_payload.sha }}, REF = ${{ github.event.client_payload.ref }}
+          slack-bot-token: ${{ secrets.SLACK_BOT_TOKEN }}
+          channel: framework-builds
+      - uses: actions/checkout@v2
+        with:
+          ref: ${{ github.event.client_payload.ref }}
+      - name: Set up JDK 1.14
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.14
+      - uses: actions/cache@v1
+        with:
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+            ${{ runner.os }}-maven-
+      - name: Build with Maven
+        run: mvn -Dmaven.test.skip -s .settings.xml -Dmaven.javadoc.skip -Dossrh_username=${{secrets.ossrh_username}} -Dossrh_password=${{secrets.ossrh_password}} --file pom.xml deploy
+      - name: Repository Dispatch App-Base-Server
+        uses: peter-evans/repository-dispatch@v1
+        with:
+          token: ${{ secrets.repos_access_token }}
+          repository: jhapy/app-base-server
+          event-type: shared-commons-build
+          client-payload: '{"ref": "${{ github.ref }}", "sha": "${{ github.sha }}"}'
+      - name: Repository Dispatch App-Audit-Server
+        uses: peter-evans/repository-dispatch@v1
+        with:
+          token: ${{ secrets.repos_access_token }}
+          repository: jhapy/app-audit-server
+          event-type: shared-commons-build
+          client-payload: '{"ref": "${{ github.ref }}", "sha": "${{ github.sha }}"}'
+      - name: Repository Dispatch App-Frontend-Application
+        uses: peter-evans/repository-dispatch@v1
+        with:
+          token: ${{ secrets.repos_access_token }}
+          repository: jhapy/app-frontend-application
+          event-type: shared-commons-build
+          client-payload: '{"ref": "${{ github.ref }}", "sha": "${{ github.sha }}"}'
+      - name: Repository Dispatch App-I18n-Server
+        uses: peter-evans/repository-dispatch@v1
+        with:
+          token: ${{ secrets.repos_access_token }}
+          repository: jhapy/app-i18n-server
+          event-type: shared-commons-build
+          client-payload: '{"ref": "${{ github.ref }}", "sha": "${{ github.sha }}"}'
+      - name: Repository Dispatch App-Resource-Server
+        uses: peter-evans/repository-dispatch@v1
+        with:
+          token: ${{ secrets.repos_access_token }}
+          repository: jhapy/app-resource-server
+          event-type: shared-commons-build
+          client-payload: '{"ref": "${{ github.ref }}", "sha": "${{ github.sha }}"}'
+      - name: Repository Dispatch App-Notification-Server
+        uses: peter-evans/repository-dispatch@v1
+        with:
+          token: ${{ secrets.repos_access_token }}
+          repository: jhapy/app-notification-server
+          event-type: shared-commons-build
+          client-payload: '{"ref": "${{ github.ref }}", "sha": "${{ github.sha }}"}'
+      - name: Repository Dispatch Utils-Registry-Server
+        uses: peter-evans/repository-dispatch@v1
+        with:
+          token: ${{ secrets.repos_access_token }}
+          repository: jhapy/utils-registry-server
+          event-type: shared-commons-build
+          client-payload: '{"ref": "${{ github.ref }}", "sha": "${{ github.sha }}"}'
+      - name: Slack Success
+        if: always()
+        uses: kpritam/slack-job-status-action@v1
+        with:
+          job-status: ${{ job.status }}
+          slack-bot-token: ${{ secrets.slack_bot_token }}
+          channel: framework-builds
