--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,4 +1,4 @@
-name: Java CI
+name: JHapy Shared Commons CI
 
 on:
   push:
@@ -30,55 +30,7 @@ jobs:
             ${{ runner.os }}-maven-
       - name: Build with Maven
         run: mvn -Dmaven.test.skip -s .settings.xml -Dmaven.javadoc.skip -Dossrh_username=${{secrets.ossrh_username}} -Dossrh_password=${{secrets.ossrh_password}} --file pom.xml deploy
-      - name: Repository Dispatch App-Base-Server
-        uses: peter-evans/repository-dispatch@v1
-        with:
-          token: ${{ secrets.repos_access_token }}
-          repository: jhapy/app-base-server
-          event-type: shared-commons-build
-          client-payload: '{"ref": "${{ github.ref }}", "sha": "${{ github.sha }}"}'
-      - name: Repository Dispatch App-Audit-Server
-        uses: peter-evans/repository-dispatch@v1
-        with:
-          token: ${{ secrets.repos_access_token }}
-          repository: jhapy/app-audit-server
-          event-type: shared-commons-build
-          client-payload: '{"ref": "${{ github.ref }}", "sha": "${{ github.sha }}"}'
-      - name: Repository Dispatch App-Frontend-Application
-        uses: peter-evans/repository-dispatch@v1
-        with:
-          token: ${{ secrets.repos_access_token }}
-          repository: jhapy/app-frontend-application
-          event-type: shared-commons-build
-          client-payload: '{"ref": "${{ github.ref }}", "sha": "${{ github.sha }}"}'
-      - name: Repository Dispatch App-I18n-Server
-        uses: peter-evans/repository-dispatch@v1
-        with:
-          token: ${{ secrets.repos_access_token }}
-          repository: jhapy/app-i18n-server
-          event-type: shared-commons-build
-          client-payload: '{"ref": "${{ github.ref }}", "sha": "${{ github.sha }}"}'
-      - name: Repository Dispatch App-Resource-Server
-        uses: peter-evans/repository-dispatch@v1
-        with:
-          token: ${{ secrets.repos_access_token }}
-          repository: jhapy/app-resource-server
-          event-type: shared-commons-build
-          client-payload: '{"ref": "${{ github.ref }}", "sha": "${{ github.sha }}"}'
-      - name: Repository Dispatch App-Notification-Server
-        uses: peter-evans/repository-dispatch@v1
-        with:
-          token: ${{ secrets.repos_access_token }}
-          repository: jhapy/app-notification-server
-          event-type: shared-commons-build
-          client-payload: '{"ref": "${{ github.ref }}", "sha": "${{ github.sha }}"}'
-      - name: Repository Dispatch Utils-Registry-Server
-        uses: peter-evans/repository-dispatch@v1
-        with:
-          token: ${{ secrets.repos_access_token }}
-          repository: jhapy/utils-registry-server
-          event-type: shared-commons-build
-          client-payload: '{"ref": "${{ github.ref }}", "sha": "${{ github.sha }}"}'
+
       - name: Slack Success
         uses: 8398a7/action-slack@v3
         with:
