--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -24,9 +24,9 @@ jobs:
           path: |
             ~/.m2/repository
             !~/.m2/repository/org/jhapy/**
-          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          key: ${{ runner.os }}-maven-shared-commons
           restore-keys: |
-            ${{ runner.os }}-maven-
+            ${{ runner.os }}-maven-shared-commons
       - name: Build with Maven
         run: mvn -Dmaven.test.skip -s .settings.xml -Dmaven.javadoc.skip -Dossrh_username=${{secrets.ossrh_username}} -Dossrh_password=${{secrets.ossrh_password}} --file pom.xml deploy
       - name: Workflow Dispatch to utils-registry-server repository
