--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.3.7.RELEASE</version>
+    <version>2.3.10.RELEASE</version>
     <relativePath/>
   </parent>
 
@@ -21,24 +21,48 @@
   <name>jHapy Framework - Commons</name>
 
   <properties>
-    <java.version>11</java.version>
+    <java.version>15</java.version>
     <maven.version>3.6.0</maven.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-    <spring-boot.version>2.3.7.RELEASE</spring-boot.version>
-    <spring-boot-admin.version>2.3.1</spring-boot-admin.version>
+    <!--suppress UnresolvedMavenProperty -->
+    <version.number>${git.commit.time}.${git.commit.id.abbrev}</version.number>
+
+    <spring-boot.version>2.3.10.RELEASE</spring-boot.version>
+    <spring-cloud.version>Hoxton.SR10</spring-cloud.version>
+    <spring-data.version>2021.0.0</spring-data.version>
+
+    <spring-boot-admin.version>2.4.1</spring-boot-admin.version>
+
     <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
     <maven-enforcer-plugin.version>3.0.0-M3</maven-enforcer-plugin.version>
     <maven.required.version>3.6</maven.required.version>
     <maven-source-plugin.version>3.2.1</maven-source-plugin.version>
-    <maven-javadoc-plugin.version>3.1.1</maven-javadoc-plugin.version>
-    <sonar-maven-plugin.version>3.6.1.1688</sonar-maven-plugin.version>
+    <maven-javadoc-plugin.version>3.2.0</maven-javadoc-plugin.version>
+    <maven-clean-plugin.version>3.1.0</maven-clean-plugin.version>
+    <maven-resources-plugin.version>3.2.0</maven-resources-plugin.version>
+    <sonar-maven-plugin.version>3.8.0.2131</sonar-maven-plugin.version>
+    <jib-maven-plugin.version>3.0.0</jib-maven-plugin.version>
     <nexus-staging-maven-plugin.version>1.6.8</nexus-staging-maven-plugin.version>
-    <lombok.version>1.18.18</lombok.version>
+    <dependency-check-maven.version>6.1.5</dependency-check-maven.version>
+    <git-commit-id-plugin.version>4.0.4</git-commit-id-plugin.version>
 
-    <lombok-maven-plugin.version>1.18.12.0</lombok-maven-plugin.version>
+    <lombok.version>1.18.20</lombok.version>
+    <javamelody.version>1.87.0</javamelody.version>
+    <problem-spring-web.version>0.26.2</problem-spring-web.version>
+    <micrometer-core.version>1.6.6</micrometer-core.version>
+    <micrometer-registry-prometheus.version>1.6.6</micrometer-registry-prometheus.version>
+    <metrics-core.version>4.1.19</metrics-core.version>
+    <logstash-logback-encoder.version>6.6</logstash-logback-encoder.version>
+    <logstash-gelf.version>1.14.1</logstash-gelf.version>
+    <springdoc-openapi-ui.version>1.5.7</springdoc-openapi-ui.version>
+    <commons-io.version>2.8.0</commons-io.version>
+    <freemarker.version>2.3.31</freemarker.version>
 
+    <commons-beanutils.version>1.9.4</commons-beanutils.version>
+    <commons-net.version>3.8.0</commons-net.version>
+    <commons-lang.version>2.6</commons-lang.version>
     <validation-api.version>2.0.1.Final</validation-api.version>
     <jackson-annotations.version>2.9.9</jackson-annotations.version>
 
@@ -46,11 +70,8 @@
     <libphonenumber.version>8.12.2</libphonenumber.version>
     <jackson-databind.version>2.9.9</jackson-databind.version>
 
-    <commmons-net.version>3.6</commmons-net.version>
-    <spring-data-commons.version>2.1.10.RELEASE</spring-data-commons.version>
+    <spring-data-commons.version>2.5.0</spring-data-commons.version>
     <javax.servlet-api.version>4.0.1</javax.servlet-api.version>
-    <commons-lang.version>2.6</commons-lang.version>
-    <freemarker.version>2.3.29</freemarker.version>
 
     <javers-spring-boot-starter-mongo.version>5.11.2</javers-spring-boot-starter-mongo.version>
   </properties>
@@ -98,7 +119,7 @@
     <dependency>
       <groupId>commons-net</groupId>
       <artifactId>commons-net</artifactId>
-      <version>${commmons-net.version}</version>
+      <version>${commons-net.version}</version>
     </dependency>
     <dependency>
       <groupId>ma.glasnost.orika</groupId>
@@ -176,19 +197,19 @@
     <dependency>
       <groupId>org.springdoc</groupId>
       <artifactId>springdoc-openapi-ui</artifactId>
-      <version>1.4.6</version>
+      <version>${springdoc-openapi-ui.version}</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.springdoc</groupId>
       <artifactId>springdoc-openapi-security</artifactId>
-      <version>1.4.6</version>
+      <version>${springdoc-openapi-ui.version}</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>commons-beanutils</groupId>
       <artifactId>commons-beanutils</artifactId>
-      <version>1.9.4</version>
+      <version>${commons-beanutils.version}</version>
     </dependency>
   </dependencies>
 
@@ -204,12 +225,23 @@
         <artifactId>maven-javadoc-plugin</artifactId>
       </plugin>
       <plugin>
+        <groupId>pl.project13.maven</groupId>
+        <artifactId>git-commit-id-plugin</artifactId>
+      </plugin>
+      <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-resources-plugin</artifactId>
       </plugin>
       <plugin>
         <groupId>org.sonatype.plugins</groupId>
         <artifactId>nexus-staging-maven-plugin</artifactId>
+        <version>${nexus-staging-maven-plugin.version}</version>
+        <extensions>true</extensions>
+        <configuration>
+          <serverId>ossrh</serverId>
+          <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+          <autoReleaseAfterClose>true</autoReleaseAfterClose>
+        </configuration>
       </plugin>
     </plugins>
     <pluginManagement>
@@ -249,12 +281,14 @@
           <version>${git-commit-id-plugin.version}</version>
           <executions>
             <execution>
+              <phase>validate</phase>
               <goals>
                 <goal>revision</goal>
               </goals>
             </execution>
           </executions>
           <configuration>
+            <dateFormat>yyyyMMdd-HHmmss</dateFormat>
             <failOnNoGitDirectory>false</failOnNoGitDirectory>
             <failOnUnableToExtractRepoInfo>false</failOnUnableToExtractRepoInfo>
             <generateGitPropertiesFile>true</generateGitPropertiesFile>
@@ -316,6 +350,18 @@
             <nexusUrl>https://oss.sonatype.org/</nexusUrl>
             <autoReleaseAfterClose>true</autoReleaseAfterClose>
           </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.owasp</groupId>
+          <artifactId>dependency-check-maven</artifactId>
+          <version>${dependency-check-maven.version}</version>
+          <executions>
+            <execution>
+              <goals>
+                <goal>check</goal>
+              </goals>
+            </execution>
+          </executions>
         </plugin>
       </plugins>
     </pluginManagement>
