--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,9 @@
 
         <spring-boot.version>2.4.5</spring-boot.version>
 
+        <spring-cloud.version>2020.0.2</spring-cloud.version>
+        <spring-data.version>2021.0.0</spring-data.version>
+
         <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
         <maven-enforcer-plugin.version>3.0.0-M3</maven-enforcer-plugin.version>
         <maven.required.version>3.6</maven.required.version>
@@ -185,6 +188,25 @@
             <version>1.9.4</version>
         </dependency>
     </dependencies>
+
+    <dependencyManagement>
+    <dependencies>
+    <dependency>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-dependencies</artifactId>
+        <version>${spring-cloud.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+    </dependency>
+    <dependency>
+        <groupId>org.springframework.data</groupId>
+        <artifactId>spring-data-bom</artifactId>
+        <version>${spring-data.version}</version>
+        <scope>import</scope>
+        <type>pom</type>
+    </dependency>
+    </dependencies>
+    </dependencyManagement>
 
     <build>
         <finalName>${project.artifactId}</finalName>
