--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <groupId>org.jhapy</groupId>
     <artifactId>jhapy-bom</artifactId>
     <version>3.0.0-SNAPSHOT</version>
+    <relativePath/>
   </parent>
 
   <groupId>org.jhapy</groupId>
@@ -60,6 +61,10 @@
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-lang3</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-text</artifactId>
     </dependency>
     <dependency>
       <groupId>commons-net</groupId>
@@ -130,6 +135,15 @@
     <dependency>
       <groupId>commons-beanutils</groupId>
       <artifactId>commons-beanutils</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.zalando</groupId>
+      <artifactId>problem-spring-web</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-tx</artifactId>
+      <scope>provided</scope>
     </dependency>
   </dependencies>
 
